[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.5"
rand = "0.9.0-alpha.1"

[[bin]]
name = "SimpleCalcV1"
path = "src/SimpleCalculator-v1/main.rs"

[[bin]]
name = "SimpleCalcV2"
path = "src/SimpleCalculator-v2/main.rs"

[[bin]]
name = "GuessingGame"
path = "src/GuessingGame/main.rs"

[[bin]]
name = "TemperatureConverter"
path = "src/TemperatureConverter/main.rs"

[[bin]]
name = "EnumTest"
path = "src/enum_test.rs"

[[bin]]
name = "QuickSort"
path = "src/quick_sort.rs"

[[bin]]
name = "RadixSort"
path = "src/radix_sort.rs"

[[bin]]
name = "CountingSort"
path = "src/counting_sort.rs"

[[bin]]
name = "binarySearch"
path = "src/binary_search.rs"

[[bin]]
name = "mergeSort"
path = "src/merge_sort.rs"